[project]
name = "tg-games"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.17.1",
    "dotenv>=0.9.9",
    "pytest>=9.0.1",
    "sqlalchemy>=2.0.44",
    "tree>=0.2.4",
]
